# surtils

./: CMakeLists.txt  README.md  main.c  project.lua
collections/: set.h  vec.c  vec.h
logging/: logger.h
src/: CMakeLists.txt  lib.c  lib.h  main.c
src/collections/: set.c  set.h  vec.c  vec.h
src/containers/: option.c  option.h  result.c  result.h
src/generics/: iter.h  map.h  set.h  shared.h  vec.c  vec.h
src/logging/: logger.c  logger.h
src/strings/: dyn_string.c  dyn_string.h
src/util/: utils.c  utils.h
utils/: utils.c  utils.h
